--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@octokit/graphql": "^9.0.3",
     "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
