--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "eslint-config-prettier": "^10.1.8",
     "jest": "^30.2.0",
     "nock": "^14.0.11",
+    "node-fetch": "^2.7.0",
     "prettier": "^3.8.1",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
