feat(persistent-storage): db infra

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,6 @@ GITHUB_TOKEN=
 # Logging
 # Options: trace, debug, info, warn, error, fatal
 LOG_LEVEL=info
+
+# SQLite database path (relative to project root)
+DB_PATH=./data/gitlingo.db
