feat(cache): config and wiring

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,10 @@ LOG_LEVEL=info
 
 # SQLite database path (relative to project root)
 DB_PATH=./data/gitlingo.db
+
+# Result Caching (OPTIONAL)
+# Set ENABLE_CACHE=true to cache successful search results in SQLite.
+# Cached results are served immediately on repeat searches within the TTL.
+# Expired cache is served as a fallback when GitHub is unreachable.
+# ENABLE_CACHE=false
+# CACHE_TTL_HOURS=12
