feat: configure allowed origins

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,12 @@
 PORT=3001
 NODE_ENV=development
 
+# CORS — comma-separated list of allowed frontend origins
+# Default (when unset): http://localhost:5173
+# In production this MUST be set, otherwise all real users will be blocked.
+# Example: ALLOWED_ORIGINS=https://app.example.com,https://staging.example.com
+# ALLOWED_ORIGINS=http://localhost:5173
+
 # GitHub API Authentication (OPTIONAL but RECOMMENDED)
 # Without token: 60 requests/hour
 # With token: 5,000 requests/hour
