- disable logo while searching - remove irrelevant example file - delete unused asset - update orphaned doc - add coverage script

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest run --coverage",
     "prepare": "cd .. && husky frontend/.husky"
   },
   "dependencies": {
