--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -51,6 +51,21 @@ jobs:
       - name: Run tests
         run: npm test -- --coverage
 
+      - name: Write coverage summary
+        run: |
+          node -e '
+            const s = require("./coverage/coverage-summary.json").total;
+            const p = v => v.toFixed(1) + "%";
+            require("fs").appendFileSync(
+              process.env.GITHUB_STEP_SUMMARY,
+              "## Backend Coverage\n\n| Metric | Coverage |\n|--------|----------|\n" +
+              "| Lines | " + p(s.lines.pct) + " |\n" +
+              "| Statements | " + p(s.statements.pct) + " |\n" +
+              "| Functions | " + p(s.functions.pct) + " |\n" +
+              "| Branches | " + p(s.branches.pct) + " |\n"
+            );
+          '
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
