feat: use config to derive concurrency limit (with default to 20 if unset)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -31,3 +31,9 @@ DB_PATH=./data/gitlingo.db
 # Expired cache is served as a fallback when GitHub is unreachable.
 # ENABLE_CACHE=false
 # CACHE_TTL_HOURS=12
+
+# Concurrency limit for in-flight GitHub API fetches (OPTIONAL)
+# Requests that arrive when this many fetches are already in-flight are
+# rejected immediately with 403 rate_limited instead of piling up.
+# Default: 20
+# CONCURRENCY_LIMIT=20
