doc: update readme

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@
 
 # Server Configuration
 PORT=3001
-NODE_ENV=development
+NODE_ENV=development # change to production in production environment
 
 # CORS — comma-separated list of allowed frontend origins
 # Default (when unset): http://localhost:5173
