fix: revert the scope

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,7 +15,7 @@ NODE_ENV=development # change to production in production environment
 # Without token: 60 requests/hour
 # With token: 5,000 requests/hour
 # Get your token: https://github.com/settings/tokens
-# Required scopes: repo, read:org, read:user, user:email
+# Required scopes: read:org, read:user, user:email
 GITHUB_TOKEN=your_github_token_here
 
 # GitHub GraphQL endpoint (OPTIONAL)
