ci: use the correct file to unpack from the relative dir

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Package dist
         run: |
-          tar -czf frontend-dist.tgz -C frontend/dist .
+          tar -czf ../frontend-dist.tgz -C dist .
 
       - name: Upload dist tarball to server
         uses: appleboy/scp-action@v0.1.7
