ci: fix cyclic deps on running docker compose up

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -137,8 +137,7 @@ jobs:
                 export COMPOSE_PROJECT_NAME="gitlingo-backend"
                 export GITLINGO_IMAGE_TAG="$TS"
 
-                # Make sure router is up
-                docker compose up -d router
+                docker compose up -d --no-deps router
 
                 # Build + start NEXT service
                 docker compose build "api_${NEXT}"
