chore: change default branch to 'main':

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -2,7 +2,7 @@ name: Deploy Frontend (gitlingo.app)
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
     paths:
       - "frontend/**" 
       - ".github/workflows/deploy-frontend.yml"
