--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   pull_request:
-    branches: [master]
+    branches: [main]
     paths:
       - 'frontend/**'
       - '.github/workflows/ci-frontend.yml'
